@@ -1,8 +1,6 @@
 language: node_js
 
 node_js:
-  - 4.1
-  - 4.0
   - 0.12
   - 0.11
 
